base function setup

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 
     <body>
-        Wee Woo Wee Woo Hi there
+        <button id="get-weather-btn">Get Weather</button>
     </body>
 
 </html>
