implemented basic input and info display

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <html lang="en">
 
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,21 @@
 
 
     <body>
-        <button id="get-weather-btn">Get Weather</button>
+
+        <form id="weather-form" onsubmit="event.preventDefault();">
+            <label id="weather-label">
+                <span>Label (temp)</span>
+                <input id="weather-input" name="weather-input" type="text" required placeholder="input address, partial address, latitude/longitude, major city name, or ZIP code">
+            </label>
+
+            <button id="weather-btn">Get Weather</button>
+        </form>
+
+        <div id="daily-weather">
+            
+        </div>
+        
     </body>
+
 
 </html>
