minor styling additions, added message box with general week description and error message display

--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,15 @@
         <form id="weather-form" onsubmit="event.preventDefault();">
             <label id="weather-label">
                 <p>Input address, partial address, "latitude,longitude", major city name, or ZIP code.</p>
-                <input id="weather-input" name="weather-input" type="text" required placeholder="Type here">
+                <input id="weather-input" name="weather-input" type="text" placeholder="Type here">
             </label>
 
             <button id="weather-btn">Get Weather</button>
         </form>
 
-        <div id="daily-weather">
+        <p id="msg"></p>
 
-        </div>
+        <div id="daily-weather"></div>
         
     </body>
 
