added weather icons and current day hourly weather

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,13 @@
 
         <p id="msg"></p>
 
+        <p id="daily-title">Daily Weather</p>
+
         <div id="daily-weather"></div>
+
+        <p id="hourly-title">Hourly Weather (Today)</p>
+
+        <div id="hourly-weather"></div>
         
     </body>
 
